# projet-bleu-canard

./: .gitignore  CMakeLists.txt  ICI.txt  ProjetBleuCanard.cbp  README.txt  [PROJET]BleuCanard.cbp  [PROJET]BleuCanard.depend  [Projet]Bleu_Canard.cbp  [Projet]Bleu_Canard.layout  areaTest.txt  main.cpp  test2.txt
Editor[AREA]/: Editor[AREA].cbp  Editor[AREA].depend  areaTest.area  control  editor.cpp  editor.h  main.cpp
ProjetBleuCanard(AREA_EDITOR)/: ProjetBleuCanard(AREA_EDITOR).cbp  ProjetBleuCanard(AREA_EDITOR).depend  ProjetBleuCanard(AREA_EDITOR).layout  main.cpp
db/: uuid
editor/: CMakeLists.txt  main.cpp  main.cpp~
editor/include/: editor.h
editor/src/: editor.cpp
game/: CMakeLists.txt  main.cpp
include/: animation.h  animationfactory.h  animationmanager.h  area.h  areafactory.h  areagraphic.h  areamanager.h  arena.h  bandit.h  bank.h  behavior.h  blacksmith.h  building.h  camera.h  character.h  charactergraphic.h  charactermanager.h  clock.h  clockmanager.h  collisionable.h  controlable.h  controlengine.h  controler.h  core.h  credit.h  creditcontrol.h  creditgraphics.h  creditmanager.h  creditobserver.h  dojo.h  effect.h  entitygraphic.h  event.h  eventbeat.h  eventget.h  eventgoto.h  eventletter.h  eventquest.h  eventtalk.h  friendlybehavior.h  (+75 more)
src/: animation.cpp  animationfactory.cpp  animationmanager.cpp  area.cpp  areafactory.cpp  areagraphic.cpp  areamanager.cpp  arena.cpp  bandit.cpp  bank.cpp  behavior.cpp  blacksmith.cpp  building.cpp  camera.cpp  character.cpp  charactergraphic.cpp  charactermanager.cpp  clock.cpp  clockmanager.cpp  (+98 more)
(+39 files in other folders)
